--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,10 +1,9 @@
-Build homepage
-build blog post page
-build products page
-build product page
 build checkout page 1 (email)
 build checkout page 2 (paypal)
 build checkout page 3 (confirmation)
+
+build order API
+
 
 build admin homepage
 build admin blogs page
@@ -19,3 +18,27 @@ build admin themes page
 build admin themes page
 
 Move wysisyg into npm package
+
+@media only screen and (max-width: 768px) {
+        background-size: contain;
+        background-position: center center !important;
+        background-attachment: local;
+    }
+
+    @media only screen 
+    and (min-device-width: 768px) 
+    and (max-device-width: 1024px) 
+    and (-webkit-min-device-pixel-ratio: 1) {
+        background-size: contain;
+        background-position: center center !important;
+        background-attachment: local;
+    }
+
+    @media only screen 
+    and (min-device-width: 768px) 
+    and (max-device-width: 1024px) 
+    and (-webkit-min-device-pixel-ratio: 2) {
+        background-size: contain;
+        background-position: center center !important;
+        background-attachment: local;
+    }
